# scaffy

./: README.md  pyproject.toml  scaffy.py
scaffy/: cli.py  core.py  rules.py
